Fix alignment issue on last slide

--- a/app/styles/_slides.scss
+++ b/app/styles/_slides.scss
@@ -76,6 +76,7 @@ a {
 
   ul {
     margin-bottom: 2rem;
+    padding: 0;
     list-style: none;
   }
 
